# CxxRandomLogo

./: .gitignore  CMakeLists.txt  Makefile  Project.toml  README.md  build.sh  main.cpp  vis.jl
.devcontainer/: devcontainer.json
docker/: Dockerfile
playground/pluto/: notebook.jl
src/: CMakeLists.txt  CxxRandomLogo.jl  affine.cpp  affine.hpp  ifs.cpp  ifs.hpp  ifs_sigma_factor.cpp  ifs_sigma_factor.hpp  jl_app.cpp  point_generation.cpp  point_generation.hpp  util.cpp  util.hpp
wraipit/: CMakeLists.txt  CxxRandomLogoWrapper.wit  README.md
wraipit/CxxRandomLogoWrapper/test/: runtests.jl
wrapit/: CMakeLists.txt  CxxRandomLogoWrapper.wit  Makefile  README.md
wrapit/CxxRandomLogoWrapper/: Project.toml
wrapit/CxxRandomLogoWrapper/src/: CxxRandomLogoWrapper.jl
